# chromadose

./: .gitignore  CHROMADOSE_DESIGN.md  CLAUDE.md  DESIGN.md  LITERATURE_REVIEW.md  OPEN_SOURCE_ANALYSIS.md  TODO.md  calibration_import.ipynb  gafchromic_converted.md  index.html  sitemap.xml
.github/workflows/: ci.yml
analysis/profiles/: index.html
analysis/registration/: index.html
chromadose/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  justfile  mkdocs.yml  pyproject.toml
chromadose/docs/: api.md  cli.md  index.md
chromadose/docs/analysis/: gamma.md  profiles.md  registration.md
chromadose/docs/getting-started/: installation.md  quickstart.md
chromadose/docs/methods/: ann.md  mayer.md  micke.md  multigaussian.md  overview.md
chromadose/site/: 404.html
chromadose/site/analysis/gamma/: index.html
chromadose/site/api/: index.html
chromadose/site/getting-started/installation/: index.html
chromadose/site/methods/mayer/: index.html
chromadose/site/methods/overview/: index.html
chromadose/src/chromadose/: __init__.py  cli.py
chromadose/src/chromadose/analysis/: __init__.py  gamma.py  profiles.py  registration.py
chromadose/src/chromadose/calibration/: __init__.py  calibration.py  curves.py
chromadose/src/chromadose/core/: image.py  types.py  utils.py
chromadose/src/chromadose/io/: __init__.py  dicom.py  report.py
chromadose/src/chromadose/methods/: __init__.py  ann.py  base.py  mayer.py  micke.py  multigaussian.py
chromadose/tests/: conftest.py  test_ann.py  test_calibration.py  test_cli.py  test_dicom.py  test_gamma.py  test_mayer.py  test_micke.py  test_multigaussian.py  test_profiles.py  test_registration.py  test_report.py  test_types.py
cli/: index.html
examples/: quickstart.ipynb
getting-started/quickstart/: index.html
methods/ann/: index.html
methods/micke/: index.html
methods/multigaussian/: index.html
search/: search_index.json
