[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromadose"
version = "0.9.0"
description = "Modern multichannel radiochromic film dosimetry"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "chromadose contributors"},
]
keywords = ["radiochromic", "dosimetry", "film", "multichannel", "medical physics", "radiotherapy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "tifffile>=2023.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dicom = ["pydicom>=2.4"]
ann-gpu = ["torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
chromadose = "chromadose.cli:main"

[project.urls]
Repository = "https://github.com/cptfinch/chromadose"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Scientific/numeric Python uses uppercase variable and argument names
# (H, W, N, D, RS, ...) for image dimensions, batch sizes, and matrix
# notation — it's the convention from numpy, linear algebra, and the
# physics/ML literature, not a style bug. Drop the two pep8-naming
# rules that fight with this; keep the rest (class names, function
# names, etc. still get checked).
ignore = ["N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
